updated customer and validation
